--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,6 +17,13 @@
 <changelog>
 
     <!--<version-->
+        <!--name="3.1.0"-->
+        <!--description="May, 2018">-->
+        <!--<text>Display previews of in-progress drafts, as they are edited, on the conversation list (TODO: Remove the feature flag)</text>-->
+        <!--<text>Provide media type previews as the snippet on the conversation list, instead of an empty box (TODO: Remove the feature flag)</text>-->
+    <!--</version>-->
+
+    <!--<version-->
         <!--name="3.0.0"-->
         <!--description="May, 2018">-->
         <!--<text>Support for creating and accessing folders to organize conversations (TODO: Remove folder feature flag and uncomment the new menu style in the navigation_drawer_conversations.xml file)</text>-->
@@ -29,6 +36,8 @@
         description="May 8th, 2018">
         <!-- Implemented the mark as unread (behind a feature flag) -->
         <!-- Implemented the media mime type previews on the conversation list (behind a feature flag) -->
+        <!-- Media type previews on the conversation list (behind a feature flag) -->
+        <!-- Draft previews on the conversation list (behind a feature flag) -->
         <text>Bug fixes and performance improvements</text>
     </version>
 
