--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -29,7 +29,7 @@
         <!--<text>Support for creating and accessing folders to organize conversations (TODO: Remove folder feature flag and uncomment the new menu style in the navigation_drawer_conversations.xml file)</text>-->
         <!--<text>Filter only unread conversations, from the navigation drawer (TODO: remove the feature flag)</text>-->
         <!--<text>Mark conversations as unread from the long click, multi-select menu (TODO: remove the feature flag)</text>-->
-        <!--<text>Support for selecting swipe actions for left and right swipes, individually (TODO: remove the feature flag)</text>-->
+        <!--<text>Support for selecting swipe actions for left and right swipes, individually. You can also turn off the swiping completely, with this method (TODO: remove the feature flag)</text>-->
     <!--</version>-->
 
     <version
