--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -34,6 +34,13 @@
 
     <version
         name="2.11.2"
+        description="May 12th, 2018">
+        <!-- Disable the hardware acceleration changes that I made in 2.11.1. Crazy amount of crashes for Android 8.1, so it has to be this... -->
+        <text>Crash fix</text>
+    </version>
+
+    <version
+        name="2.11.2"
         description="May 11th, 2018">
         <!-- Implemented the mark as unread (behind a feature flag) -->
         <!-- Implemented the media mime type previews on the conversation list (behind a feature flag) -->
