--- a/shared/src/main/res/values/arrays.xml
+++ b/shared/src/main/res/values/arrays.xml
@@ -183,6 +183,7 @@
         <item>@string/delete</item>
         <item>@string/read</item>
         <item>@string/mute_conversation</item>
+        <!--<item>@string/menu_archive_conversation</item>-->
     </string-array>
 
     <string-array name="notification_actions_values">
@@ -191,6 +192,7 @@
         <item>delete</item>
         <item>read</item>
         <item>mute</item>
+        <!--<item>archive</item>-->
     </string-array>
 
     <string-array name="notification_actions_default">
