start setting up material theme layout

--- a/shared/src/main/res/layout/activity_messenger.xml
+++ b/shared/src/main/res/layout/activity_messenger.xml
@@ -68,7 +68,8 @@
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/conversation_list_container" />
+                android:id="@+id/conversation_list_container"
+                android:background="@color/drawerBackground"/>
 
         </LinearLayout>
 
