--- a/shared/src/main/res/values/colors.xml
+++ b/shared/src/main/res/values/colors.xml
@@ -133,4 +133,6 @@
 
     <color name="actionModeBackground">#303030</color>
 
+    <color name="navigationBarDivider">#00000000</color>
+
 </resources>
