--- a/shared/src/main/res/layout/fragment_message_list.xml
+++ b/shared/src/main/res/layout/fragment_message_list.xml
@@ -18,10 +18,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/drawerBackground" >
+    android:layout_height="match_parent" >
 
     <LinearLayout
+        android:id="@+id/background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clickable="true"
@@ -171,6 +171,7 @@
         </FrameLayout>
 
         <android.support.v7.widget.CardView
+            android:id="@+id/reply_bar_card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="-24dp"
@@ -264,8 +265,8 @@
 
                     <android.support.design.widget.FloatingActionButton
                         android:id="@+id/send"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
                         android:layout_marginEnd="8dp"
                         android:layout_marginStart="8dp"
                         android:contentDescription="@string/send_message"
