--- a/shared/src/main/res/layout/message_image_sending_material_theme.xml
+++ b/shared/src/main/res/layout/message_image_sending_material_theme.xml
@@ -18,10 +18,10 @@
     android:id="@+id/message_holder"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="6dp"
     android:layout_marginBottom="6dp"
-    android:layout_marginStart="32dp"
     android:layout_marginEnd="32dp"
+    android:layout_marginStart="32dp"
+    android:layout_marginTop="6dp"
     android:background="@drawable/focusable_background"
     android:focusable="true"
     android:gravity="end"
@@ -31,34 +31,34 @@
         android:id="@+id/image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@drawable/extra_rounded_rect"
         android:contentDescription="@string/mms_image"
         android:maxHeight="@dimen/max_message_width"
-        android:background="@drawable/extra_rounded_rect"
         android:scaleType="fitCenter"
         android:transitionName="image" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_marginBottom="2dp"
         android:layout_marginEnd="20dp"
         android:layout_marginTop="2dp"
-        android:layout_marginBottom="2dp">
+        android:orientation="horizontal">
 
         <TextView
+            android:id="@+id/timestamp"
             android:layout_width="wrap_content"
             android:layout_height="@dimen/timestamp_height"
-            android:textSize="12sp"
-            android:textColor="@color/secondaryText"
             android:layout_marginEnd="8dp"
-            android:id="@+id/timestamp" />
+            android:textColor="@color/secondaryText"
+            android:textSize="12sp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
+            android:text="@string/sending"
             android:textColor="@color/secondaryText"
-            android:text="@string/sending" />
+            android:textSize="12sp" />
 
     </LinearLayout>
 
