--- a/shared/src/main/res/layout/message_received_material_theme.xml
+++ b/shared/src/main/res/layout/message_received_material_theme.xml
@@ -15,76 +15,76 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="6dp"
     android:layout_marginBottom="6dp"
-    android:paddingStart="16dp"
-    android:paddingEnd="16dp"
+    android:layout_marginTop="6dp"
+    android:background="@drawable/focusable_background"
     android:focusable="true"
-    android:background="@drawable/focusable_background">
+    android:orientation="vertical"
+    android:paddingEnd="16dp"
+    android:paddingStart="16dp">
 
     <LinearLayout
+        android:id="@+id/message_holder"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:background="@drawable/message_material_theme_received_background"
         android:backgroundTint="@color/colorPrimary"
-        android:maxWidth="@dimen/max_message_width"
-        android:paddingStart="20dp"
-        android:paddingEnd="8dp"
         android:clickable="true"
-        android:id="@+id/message_holder">
+        android:maxWidth="@dimen/max_message_width"
+        android:orientation="vertical"
+        android:paddingEnd="8dp"
+        android:paddingStart="20dp">
 
         <ImageView
+            android:id="@+id/image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="6dp"
+            android:layout_marginEnd="2dp"
+            android:contentDescription="@string/mms_image"
             android:maxHeight="@dimen/max_message_width"
             android:minWidth="@dimen/min_mms_picture_width"
             android:scaleType="centerInside"
-            android:id="@+id/image"
-            android:transitionName="image"
-            android:layout_marginBottom="6dp"
-            android:layout_marginEnd="2dp"
-            android:contentDescription="@string/mms_image" />
+            android:transitionName="image" />
 
         <xyz.klinker.messenger.shared.view.emoji.EmojiableTextView
+            android:id="@+id/message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:maxWidth="@dimen/max_message_width"
-            android:textSize="16sp"
-            android:textColor="@android:color/white"
-            android:padding="8dp"
-            android:layout_marginTop="-1dp"
             android:layout_gravity="center_vertical"
-            android:id="@+id/message" />
+            android:layout_marginTop="-1dp"
+            android:maxWidth="@dimen/max_message_width"
+            android:padding="8dp"
+            android:textColor="@android:color/white"
+            android:textSize="16sp" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_marginBottom="2dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="-2dp"
-        android:layout_marginBottom="2dp">
+        android:orientation="horizontal">
 
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/timestamp_height"
-            android:textSize="12sp"
-            android:textColor="@color/secondaryText"
             android:id="@+id/contact"
-            android:visibility="gone"
-            android:layout_marginEnd="2dp" />
-
-        <TextView
             android:layout_width="wrap_content"
             android:layout_height="@dimen/timestamp_height"
-            android:textSize="12sp"
+            android:layout_marginEnd="2dp"
             android:textColor="@color/secondaryText"
-            android:id="@+id/timestamp" />
+            android:textSize="12sp"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/timestamp"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/timestamp_height"
+            android:textColor="@color/secondaryText"
+            android:textSize="12sp" />
 
     </LinearLayout>
 
