fix a few more issues for tablets

--- a/shared/src/main/res/layout/activity_messenger.xml
+++ b/shared/src/main/res/layout/activity_messenger.xml
@@ -68,8 +68,7 @@
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:id="@+id/conversation_list_container"
-                android:background="@color/drawerBackground"/>
+                android:id="@+id/conversation_list_container"/>
 
         </LinearLayout>
 
