update the color of the card on the message screen

--- a/shared/src/main/res/layout/fragment_message_list.xml
+++ b/shared/src/main/res/layout/fragment_message_list.xml
@@ -177,7 +177,7 @@
             android:layout_marginBottom="-24dp"
             app:cardElevation="5dp"
             app:cardCornerRadius="24dp"
-            app:cardBackgroundColor="@color/drawerBackground" >
+            app:cardBackgroundColor="@color/replyBarCard" >
 
             <LinearLayout
                 android:layout_width="match_parent"
