--- a/shared/src/main/res/values-night/colors.xml
+++ b/shared/src/main/res/values-night/colors.xml
@@ -23,6 +23,7 @@
 
     <color name="background">#374248</color>
     <color name="quickReplyBackground">@color/background</color>
+    <color name="replyBarCard">@color/drawerBackground</color>
     <color name="swipeBackground">#2c353a</color>
     <color name="drawerBackground">#202B30</color>
     <color name="selectedBackground">#33444d</color>
