--- a/shared/src/main/res/layout/message_received_material_theme.xml
+++ b/shared/src/main/res/layout/message_received_material_theme.xml
@@ -57,6 +57,7 @@
             android:layout_marginTop="-1dp"
             android:maxWidth="@dimen/max_message_width"
             android:padding="8dp"
+            android:layout_marginStart="2dp"
             android:textColor="@android:color/white"
             android:textSize="16sp" />
 
