--- a/shared/src/main/res/layout/message_received_material_theme.xml
+++ b/shared/src/main/res/layout/message_received_material_theme.xml
@@ -54,10 +54,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:layout_marginTop="-1dp"
             android:maxWidth="@dimen/max_message_width"
-            android:padding="8dp"
-            android:layout_marginStart="2dp"
+            android:padding="6dp"
+            android:layout_marginStart="3dp"
+            android:layout_marginEnd="3dp"
             android:textColor="@android:color/white"
             android:textSize="16sp" />
 
