--- a/shared/src/main/res/layout/message_sent_material_theme.xml
+++ b/shared/src/main/res/layout/message_sent_material_theme.xml
@@ -54,9 +54,10 @@
             android:id="@+id/message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="-2dp"
             android:maxWidth="@dimen/max_message_width"
-            android:padding="8dp"
+            android:padding="6dp"
+            android:layout_marginStart="3dp"
+            android:layout_marginEnd="3dp"
             android:textColor="@color/primaryText"
             android:textSize="16sp" />
 
