--- a/shared/src/main/res/layout/message_delivered_material_theme.xml
+++ b/shared/src/main/res/layout/message_delivered_material_theme.xml
@@ -37,7 +37,8 @@
         android:minWidth="@dimen/min_mms_picture_width"
         android:orientation="vertical"
         android:paddingEnd="20dp"
-        android:paddingStart="8dp">
+        android:paddingStart="8dp"
+        android:gravity="center_vertical">
 
         <ImageView
             android:id="@+id/image"
@@ -59,7 +60,8 @@
             android:layout_marginStart="3dp"
             android:layout_marginEnd="3dp"
             android:textColor="@color/primaryText"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:gravity="center_vertical" />
 
     </LinearLayout>
 
