--- a/shared/src/main/res/layout/message_received_material_theme.xml
+++ b/shared/src/main/res/layout/message_received_material_theme.xml
@@ -35,7 +35,8 @@
         android:maxWidth="@dimen/max_message_width"
         android:orientation="vertical"
         android:paddingEnd="8dp"
-        android:paddingStart="20dp">
+        android:paddingStart="20dp"
+        android:gravity="center_vertical">
 
         <ImageView
             android:id="@+id/image"
@@ -59,7 +60,8 @@
             android:layout_marginStart="3dp"
             android:layout_marginEnd="3dp"
             android:textColor="@android:color/white"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:gravity="center_vertical" />
 
     </LinearLayout>
 
