--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -24,6 +24,7 @@
         <text>Provide media type previews as the snippet on the conversation list, instead of an empty box (TODO: Remove the feature flag)</text>
         <text>Removed the rounded bubbles preference, in favor of the new bubble style (which is much more rounded already)</text>
         <text>Removed the adjustable nav bar preference that was available in Android 8.0+. I am using this by default.</text>
+        <text>Improvements to group messaging</text>
         <text>Improvements to creating scheduled messages</text>
         <text>Bug fixes</text>
     </version>
