add preference to pick between the different bubble types (rounded/new, square/old, and circle/no tail)

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -20,9 +20,9 @@
         name="3.1.0"
         description="May 29th, 2018">
         <text>UI improvements</text>
-        <text>Display previews of in-progress drafts, as they are edited, on the conversation list (TODO: Remove the feature flag)</text>
-        <text>Provide media type previews as the snippet on the conversation list, instead of an empty box (TODO: Remove the feature flag)</text>
-        <text>Removed the rounded bubbles preference, in favor of the new bubble style (which is much more rounded already)</text>
+        <text>Display previews of in-progress drafts, as they are edited, on the conversation list</text>
+        <text>Provide media type previews as the snippet on the conversation list, instead of an empty box</text>
+        <text>Removed the rounded bubbles preference, in favor of the new bubble style. You can select between all three bubble styles, from theme settings.</text>
         <text>Removed the adjustable nav bar preference that was available in Android 8.0+. I am using this by default.</text>
         <text>Improvements to group messaging</text>
         <text>Improvements to creating scheduled messages</text>
