--- a/shared/src/main/res/values/arrays.xml
+++ b/shared/src/main/res/values/arrays.xml
@@ -234,4 +234,16 @@
         <item>none</item>
     </string-array>
 
+    <string-array name="bubble_style">
+        <item>@string/bubble_style_round</item>
+        <item>@string/bubble_style_square</item>
+        <item>@string/bubble_style_circle</item>
+    </string-array>
+
+    <string-array name="bubble_style_values">
+        <item>round</item>
+        <item>square</item>
+        <item>circle</item>
+    </string-array>
+
 </resources>
