--- a/shared/src/main/res/values/preferences.xml
+++ b/shared/src/main/res/values/preferences.xml
@@ -83,8 +83,7 @@
     <string name="pref_advanced_category" translatable="false">advanced_settings_category</string>
     <string name="pref_ringtone" translatable="false">ringtone</string>
     <string name="pref_base_theme" translatable="false">base_theme</string>
-    <string name="pref_adjustable_nav_bar" translatable="false">adjustable_nav_bar</string>
-    <string name="pref_rounder_bubbles" translatable="false">rounder_bubbles</string>
+    <string name="pref_bubble_style" translatable="false">bubble_style</string>
     <string name="pref_swipe_delete" translatable="false">swipe_delete</string>
     <string name="pref_swipe_choices" translatable="false">swipe_choices</string>
     <string name="pref_left_to_right_swipe" translatable="false">left_to_right_swipe</string>
