--- a/shared/src/main/res/xml/settings_theme.xml
+++ b/shared/src/main/res/xml/settings_theme.xml
@@ -18,7 +18,7 @@
             android:title="@string/bubble_style"
             android:entries="@array/bubble_style"
             android:entryValues="@array/bubble_style_values"
-            android:defaultValue="rounded" />
+            android:defaultValue="round" />
 
         <xyz.klinker.messenger.view.AutoSummaryListPreference
             android:key="@string/pref_font_size"
